@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: dbd_mysql.h,v 1.6 2005/11/06 02:15:56 cut-sea Exp $
+ * $Id: dbd_mysql.h,v 1.7 2007/02/15 06:04:10 bizenn Exp $
  */
 
 /* Prologue */
@@ -43,17 +43,21 @@ SCM_DECL_BEGIN
 
 extern ScmClass *MysqlHandleClass;
 typedef ScmForeignPointer MysqlHandle;
-#define MYSQL_HANDLE_P(obj)     SCM_XTYPEP(obj, MysqlHandleClass)
-#define MYSQL_HANDLE_UNBOX(obj) SCM_FOREIGN_POINTER_REF(MYSQL*, obj)
-#define MYSQL_HANDLE_BOX(handle) \
-    Scm_MakeForeignPointer(MysqlHandleClass, handle)
+#define MYSQL_HANDLE_P(obj)      SCM_XTYPEP(obj, MysqlHandleClass)
+#define MYSQL_HANDLE_UNBOX(obj)  SCM_FOREIGN_POINTER_REF(MYSQL*, obj)
+#define MYSQL_HANDLE_BOX(handle) Scm_MakeForeignPointer(MysqlHandleClass, handle)
 
 extern ScmClass *MysqlResClass;
 typedef ScmForeignPointer ScmMysqlRes;
 #define MYSQL_RES_P(obj)     SCM_XTYPEP(obj, MysqlResClass)
 #define MYSQL_RES_UNBOX(obj) SCM_FOREIGN_POINTER_REF(MYSQL_RES*, obj)
-#define MYSQL_RES_BOX(res) \
-    Scm_MakeForeignPointer(MysqlResClass, res)
+#define MYSQL_RES_BOX(res)   Scm_MakeForeignPointer(MysqlResClass, res)
+
+extern ScmClass *MysqlStmtClass;
+typedef ScmForeignPointer ScmMysqlStmt;
+#define MYSQL_STMT_P(obj)     SCM_XTYPE(obj, MysqlStmtClass)
+#define MYSQL_STMT_UNBOX(obj) SCM_FOREIGN_POINTER_REF(MYSQL_STMT*, obj)
+#define MYSQL_STMT_BOX(stmt)  Scm_MakeForeignPointer(MysqlStmtClass, stmt)
 
 /*
  * API
